--- a/src/Template/cup/catalog/attribute/index.twig
+++ b/src/Template/cup/catalog/attribute/index.twig
@@ -30,7 +30,7 @@
                                 <tr>
                                     <th>Наименование</th>
                                     <th width="20%">Адрес</th>
-                                    <th width="10%" class="text-center no-sorting"></th>
+                                    <th width="15%" class="text-center no-sorting"></th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -47,28 +47,18 @@
                                             } %}
                                         </td>
                                         <td class="text-center">
-                                            <div class="btn-group">
-                                                <div class="btn-group dropdown">
-                                                    <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
-                                                        <i class="fas fa-bars"></i>
+                                            <form action="/cup/catalog/attribute/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить аттрибут?');">
+                                                <div class="btn-group">
+                                                    <a href="/cup/catalog/attribute/{{ item.uuid }}/edit" class="btn btn-sm btn-info">
+                                                        <i class="fas fa-fw fa-edit"></i>
+                                                        <span class="d-none d-md-inline-block">Изменить</span>
+                                                    </a>
+                                                    <button type="submit" class="btn btn-sm btn-danger">
+                                                        <i class="fas fa-fw fa-trash-alt"></i>
+                                                        <span class="d-none d-md-inline-block">Удалить</span>
                                                     </button>
-                                                    <ul class="dropdown-menu" role="menu">
-                                                        <li>
-                                                            <a href="/cup/catalog/attribute/{{ item.uuid }}/edit" class="btn btn-link"><i class="fas fa-edit"></i>Изменить</a>
-                                                        </li>
-                                                        <li>
-                                                            <div class="dropdown-divider"></div>
-                                                        </li>
-                                                        <li>
-                                                            <form action="/cup/catalog/attribute/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить аттрибут?');">
-                                                                <button type="submit" class="btn btn-link text-danger">
-                                                                    <i class="fas fa-fw fa-trash-alt"></i> Удалить
-                                                                </button>
-                                                            </form>
-                                                        </li>
-                                                    </ul>
                                                 </div>
-                                            </div>
+                                            </form>
                                         </td>
                                     </tr>
                                 {% endfor %}
