--- a/src/Template/cup/form/index.twig
+++ b/src/Template/cup/form/index.twig
@@ -32,7 +32,7 @@
                                     <th>Название</th>
                                     <th width="20%">E-Mail адреса получателей</th>
                                     <th width="20%">Обработчик формы</th>
-                                    <th width="10%" class="text-center no-sorting"></th>
+                                    <th width="15%" class="text-center no-sorting"></th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -42,12 +42,7 @@
                                             {{ item.title }}
                                         </td>
                                         <td>
-                                            {% for origin in item.origin %}
-                                                <a href="{{ origin }}" target="_blank" class="d-block">
-                                                    {{ origin }}
-                                                    <i class="fas fa-external-link-alt"></i>
-                                                </a>
-                                            {% endfor %}
+                                            {{ item.mailto|join(', ') }}
                                         </td>
                                         <td>
                                             {% include 'cup/form.twig' with {
@@ -59,27 +54,22 @@
                                             } %}
                                         </td>
                                         <td class="text-center">
-                                            <div class="btn-group dropdown">
-                                                <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
-                                                    <i class="fas fa-bars"></i>
-                                                </button>
-                                                <ul class="dropdown-menu" role="menu">
-                                                    <li>
-                                                        <a href="/cup/form/{{ item.uuid }}/view" class="btn btn-link"><i class="fas fa-fw fa-eye"></i> Заявки</a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="/cup/form/{{ item.uuid }}/edit" class="btn btn-link"><i class="fas fa-fw fa-edit"></i> Изменить</a>
-                                                    </li>
-                                                    <li><div class="dropdown-divider"></div></li>
-                                                    <li>
-                                                        <form action="/cup/form/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить форму?');">
-                                                            <button type="submit" class="btn btn-link text-danger">
-                                                                <i class="fas fa-fw fa-trash-alt"></i> Удалить
-                                                            </button>
-                                                        </form>
-                                                    </li>
-                                                </ul>
-                                            </div>
+                                            <form action="/cup/form/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить форму?');">
+                                                <div class="btn-group">
+                                                    <a href="/cup/form/{{ item.uuid }}/view" class="btn btn-sm btn-info">
+                                                        <i class="fas fa-fw fa-eye"></i>
+                                                        <span class="d-none d-md-inline-block">Заявки</span>
+                                                    </a>
+                                                    <a href="/cup/form/{{ item.uuid }}/edit" class="btn btn-sm btn-info">
+                                                        <i class="fas fa-fw fa-edit"></i>
+                                                        <span class="d-none d-md-inline-block">Изменить</span>
+                                                    </a>
+                                                    <button type="submit" class="btn btn-sm btn-danger">
+                                                        <i class="fas fa-fw fa-trash-alt"></i>
+                                                        <span class="d-none d-md-inline-block">Удалить</span>
+                                                    </button>
+                                                </div>
+                                            </form>
                                         </td>
                                     </tr>
                                 {% endfor %}
