--- a/src/Template/cup/guestbook/index.twig
+++ b/src/Template/cup/guestbook/index.twig
@@ -25,25 +25,15 @@
                         <table data-table class="table table-striped table-hover" style="width: 100%;">
                             <thead>
                                 <tr>
-                                    <th width="15%">Имя</th>
-                                    <th width="5%">Статус</th>
-                                    <th width="55%">Сообщение</th>
+                                    <th width="10%">Статус</th>
+                                    <th>Имя</th>
                                     <th width="15%">Дата создания</th>
-                                    <th width="10%" class="text-center no-sorting"></th>
+                                    <th width="15%" class="text-center no-sorting"></th>
                                 </tr>
                             </thead>
                             <tbody>
                                 {% for item in list %}
                                     <tr>
-                                        <td>
-                                            {{ item.name }}
-
-                                            {% if item.email %}
-                                                <a href="mailto:{{ item.email }}" class="text-black-50 float-right">
-                                                    <i class="fa fa-envelope"></i>
-                                                </a>
-                                            {% endif %}
-                                        </td>
                                         <td class="text-center">
                                             {% if item.status == 'work' %}
                                                 <span class="badge badge-default">Активный</span>
@@ -53,29 +43,28 @@
                                             {% endif %}
                                         </td>
                                         <td>
-                                            <pre class="mt-2">{{ item.message|truncate(100) }}</pre>
-                                            <pre class="mb-2 text-primary">{{ item.response|truncate(100) }}</pre>
+                                            {{ item.name }}
+
+                                            {% if item.email %}
+                                                <a href="mailto:{{ item.email }}" class="text-black-50 float-right">
+                                                    <i class="fa fa-envelope"></i>
+                                                </a>
+                                            {% endif %}
                                         </td>
                                         <td data-order="{{ item.date.getTimestamp() }}">{{ item.date|df('d.m.Y H:i:s') }}</td>
                                         <td class="text-center">
-                                            <div class="btn-group dropdown">
-                                                <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
-                                                    <i class="fas fa-bars"></i>
-                                                </button>
-                                                <ul class="dropdown-menu" role="menu">
-                                                    <li>
-                                                        <a href="/cup/guestbook/{{ item.uuid }}/edit" class="btn btn-link"><i class="fas fa-fw fa-edit"></i> Изменить</a>
-                                                    </li>
-                                                    <li><div class="dropdown-divider"></div></li>
-                                                    <li>
-                                                        <form action="/cup/guestbook/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить запись?');">
-                                                            <button type="submit" class="btn btn-link text-danger">
-                                                                <i class="fas fa-fw fa-trash-alt"></i> Удалить
-                                                            </button>
-                                                        </form>
-                                                    </li>
-                                                </ul>
-                                            </div>
+                                            <form action="/cup/guestbook/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить запись?');">
+                                                <div class="btn-group">
+                                                    <a href="/cup/guestbook/{{ item.uuid }}/edit" class="btn btn-sm btn-info">
+                                                        <i class="fas fa-fw fa-edit"></i>
+                                                        <span class="d-none d-md-inline-block">Изменить</span>
+                                                    </a>
+                                                    <button type="submit" class="btn btn-sm btn-danger">
+                                                        <i class="fas fa-fw fa-trash-alt"></i>
+                                                        <span class="d-none d-md-inline-block">Удалить</span>
+                                                    </button>
+                                                </div>
+                                            </form>
                                         </td>
                                     </tr>
                                 {% endfor %}
