--- a/src/Template/cup/publication/category/index.twig
+++ b/src/Template/cup/publication/category/index.twig
@@ -32,18 +32,13 @@
                                     <th width="15%">Категория</th>
                                     <th width="7%">Публичная</th>
                                     <th width="7%">Вложенные</th>
-                                    <th width="10%" class="text-center no-sorting"></th>
+                                    <th width="15%" class="text-center no-sorting"></th>
                                 </tr>
                             </thead>
                             <tbody>
                                 {% for item in list %}
                                     <tr>
-                                        <td>
-                                            <a href="/{{ item.address }}" target="_blank">
-                                                {{ item.title }}
-                                                <i class="fas fa-external-link-alt"></i>
-                                            </a>
-                                        </td>
+                                        <td>{{ item.title }}</td>
                                         <td>{{ list.where('uuid', item.parent).first().title ?? '&mdash;' }}</td>
                                         <td class="text-center" data-order="{{ item.public }}">
                                             {{ item.public ? '<i class="fas fa-check"></i>' : '<i class="fas fa-times"></i>' }}
@@ -52,22 +47,18 @@
                                             {{ item.children ? '<i class="fas fa-check"></i>' : '<i class="fas fa-times"></i>' }}
                                         </td>
                                         <td class="text-center">
-                                            <div class="btn-group dropdown">
-                                                <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
-                                                    <i class="fas fa-bars"></i>
-                                                </button>
-                                                <ul class="dropdown-menu" role="menu">
-                                                    <li>
-                                                        <a href="/cup/publication/category/{{ item.uuid }}/edit" class="btn btn-link"><i class="fas fa-fw fa-edit"></i> Изменить</a>
-                                                        <div class="dropdown-divider"></div>
-                                                        <form action="/cup/publication/category/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить категорию?');">
-                                                            <button type="submit" class="btn btn-link text-danger">
-                                                                <i class="fas fa-fw fa-trash-alt"></i> Удалить
-                                                            </button>
-                                                        </form>
-                                                    </li>
-                                                </ul>
-                                            </div>
+                                            <form action="/cup/publication/category/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить категорию публикаций?');">
+                                                <div class="btn-group">
+                                                    <a href="/cup/publication/category/{{ item.uuid }}/edit" class="btn btn-sm btn-info">
+                                                        <i class="fas fa-fw fa-edit"></i>
+                                                        <span class="d-none d-md-inline-block">Изменить</span>
+                                                    </a>
+                                                    <button type="submit" class="btn btn-sm btn-danger">
+                                                        <i class="fas fa-fw fa-trash-alt"></i>
+                                                        <span class="d-none d-md-inline-block">Удалить</span>
+                                                    </button>
+                                                </div>
+                                            </form>
                                         </td>
                                     </tr>
                                 {% endfor %}
