--- a/src/Template/cup/user/group/index.twig
+++ b/src/Template/cup/user/group/index.twig
@@ -31,7 +31,7 @@
                                     <th>Название</th>
                                     <th width="10%">Пользователей</th>
                                     <th width="20%">Права доступа</th>
-                                    <th width="10%" class="text-center no-sorting"></th>
+                                    <th width="15%" class="text-center no-sorting"></th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -50,24 +50,18 @@
                                             </code>
                                         </td>
                                         <td class="text-center">
-                                            <div class="btn-group dropdown">
-                                                <button class="btn btn-info btn-sm dropdown-toggle" type="button" data-toggle="dropdown">
-                                                    <i class="fas fa-bars"></i>
-                                                </button>
-                                                <ul class="dropdown-menu" role="menu">
-                                                    <li>
-                                                        <a href="/cup/user/group/{{ group.uuid }}/edit" class="btn btn-link"><i class="fas fa-fw fa-edit"></i> Изменить</a>
-                                                    </li>
-                                                    <li><div class="dropdown-divider"></div></li>
-                                                    <li>
-                                                        <form action="/cup/user/group/{{ group.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить группу?');" {{ users_in_group ? 'data-toggle="tooltip" data-placement="left" title="Нельзя удалить группу, пока в ней есть пользователи"' }}>
-                                                            <button type="submit" class="btn btn-link text-danger" {{ users_in_group ? 'disabled' }}>
-                                                                <i class="fas fa-fw fa-trash-alt"></i> Удалить
-                                                            </button>
-                                                        </form>
-                                                    </li>
-                                                </ul>
-                                            </div>
+                                            <form action="/cup/user/group/{{ group.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить группу?');">
+                                                <div class="btn-group">
+                                                    <a href="/cup/user/group/{{ group.uuid }}/edit" class="btn btn-sm btn-info">
+                                                        <i class="fas fa-fw fa-edit"></i>
+                                                        <span class="d-none d-md-inline-block">Изменить</span>
+                                                    </a>
+                                                    <button type="{{ users_in_group ? 'button' : 'submit' }}" class="btn btn-sm btn-danger" {{ users_in_group ? 'data-toggle="tooltip" data-placement="left" title="Нельзя удалить группу, пока в ней есть пользователи"' }}>
+                                                        <i class="fas fa-fw fa-trash-alt"></i>
+                                                        <span class="d-none d-md-inline-block">Удалить</span>
+                                                    </button>
+                                                </div>
+                                            </form>
                                         </td>
                                     </tr>
                                 {% endfor %}
