fix category view products link

--- a/src/Template/cup/catalog/category/index.twig
+++ b/src/Template/cup/catalog/category/index.twig
@@ -52,7 +52,7 @@
                                                         <i class="fas fa-fw fa-sitemap"></i>
                                                         <span class="d-none d-md-inline-block">Подкатегории</span>
                                                     </a>
-                                                    <a href="/cup/catalog/category/{{ category.uuid }}" class="btn btn-sm btn-info">
+                                                    <a href="/cup/catalog/product/{{ category.uuid }}" class="btn btn-sm btn-info">
                                                         <i class="fas fa-fw fa-eye"></i>
                                                         <span class="d-none d-md-inline-block">Номенклатура</span>
                                                     </a>
