fix load excel file

--- a/src/Template/cup/catalog/import-modal.twig
+++ b/src/Template/cup/catalog/import-modal.twig
@@ -9,7 +9,7 @@
                     'args': {
                         'required': true,
                         'class': ['d-block', 'btn', 'btn-sm', 'bg-grey2', 'm-auto'],
-                        'accept': 'application/vnd.ms-excel'
+                        'accept': 'application/vnd.ms-excel,application/vnd.openxmlformats-officedocument.spreadsheetml.sheet'
                     }
                 } %}
             </div>
