fix file index list

--- a/src/Template/cup/file/index.twig
+++ b/src/Template/cup/file/index.twig
@@ -36,7 +36,7 @@
                                     <tr>
                                         <td>
                                             <a href="{{ item.getPublicPath() }}" target="_blank">
-                                                {{ item.getName() }}
+                                                {{ item.getFileName() }}
                                                 <i class="fas fa-external-link-alt"></i>
                                             </a>
                                         </td>
