--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -329,7 +329,7 @@
                                                                         <th width="50%">Версия движка:</th>
                                                                         <td width="50%" class="text-center">
                                                                             {{ properties.version.branch }}
-                                                                            (<a href="https://github.com/0x12f/platform/tree/{{ properties.sha }}" target="_blank">source</a>)
+                                                                            (<a href="https://github.com/0x12f/platform/tree/{{ properties.version.commit }}" target="_blank">source</a>)
                                                                         </td>
                                                                     </tr>
                                                                     <tr>
