fix access check
(cherry picked from commit 7b23609149de665375101a1de4ca5397bb66bd04)

--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -40,7 +40,8 @@
                     <!-- Navbar Header -->
                     <nav class="navbar navbar-header navbar-expand-lg" data-background-color="blue2">
                         <div class="container-fluid">
-                            {% if user %}
+
+                            {% if user and ('cup:main' in user.group.access) %}
                                 <ul class="navbar-nav topbar-nav ml-md-auto align-items-center">
                                     {% for plugin in plugins %}
                                         {% for param in plugin.getToolbarItem() %}
